   (adding that value to the error enum, was documented but missing),
   again thanks to Sandro
- fix windows-builds.sh (shell quoting in copying stage) and add some
  bits to shipped header to make it directly usable in MSVC (define ssize_t,
  bug 232)
- no overwriting of LIBS in Makefile (build system regression in 1.23,
  thanks to Peter Korsgaard for reporting that one)

1.23.4
------
- mpg123: Fix logic of prebuffering small bits for glitch-free start of
  playback. The logic as introduced in 1.23.0 actually introduced stuttering!
  The fix for this is really minimal and I urge everyone to at least include
  that one. It is the changeset of rev. 4041.
- libout123:
-- Actually make OUT123_KEEP_PLAYING on by default, as documented.
-- Fix buffer logic with regard to draining, use common device writing
   code to handle resuming from pause. This fixes sdl output with buffer,
   possibly other sfifo-based outputs like CoreAudio (those were poorly
   tested with buffer, as the combination is indeed unusual, see bug 230).
-- Buffer pauses devices for prebuffering, to avoid underruns.
-- More reliable playback with SDL, Portaudio and CoreAudio outputs.
   This includes FIFO draining on close to avoid dropping of the end.
   It should fix parts of bug 230.
-- Fixed memory leaks with some outputs where a call to the deinit()
   function is necessary during available/working module checking.
- mpg123, out123: Use the default output flags to get OUT123_KEEP_PLAYING.
  Without this, there is a good chance to abort on SIGSTOP/CONT while playing.
  This is a regression from 1.22 .
- Build fixes (bugs 227 and 228) and some build system hackery.
  Gone are libc feature test macros in compat.h . This means always
  using our own strdup() implementation. Simpler than being bugged by
  feature test macros in strict compiler mode (when _DEFAULT_SOURCE is not
  defined).
- ./configure --enable-nagging does something also without --enable-debug,